Implement telemetry and metrics system for JMusicBot
- Introduced a comprehensive telemetry system to collect and report usage metrics.
- Added new classes: `MetricsCollector`, `InstanceIdManager`, `CollectionPoller`, and `TelemetryStore` for managing telemetry data.
- Enhanced `Bot` class to initialize and start the metrics system upon connection.
- Updated `BotConfig` to include configuration options for enabling/disabling telemetry and specifying the metrics manifest URL.
- Implemented telemetry event types for startup, snapshots, and errors, with appropriate data collection.
- Added unit tests for the new telemetry components to ensure functionality and reliability.
- Updated `reference.conf` to include telemetry configuration options and documentation.

This commit enhances the bot's ability to gather insights into its usage and performance, aiding in future improvements and debugging.